@@ -15,6 +15,7 @@ git - ?
 	  - Optionally minified (using JavaScript::Minifier::XS)
 	  - Language strings are translatable
 	  - Information is automatically synchronised with data/global.pl
+	- Changed language selector into a Javascript dropdown
 
 2.7 - 2009-09-24
 	- Improved styling of the threeboxes layout
